[metadata]
name = test_http
author = Ian Mackinnon
author-email = imackinnon@gmail.com
summary = Test HTTP services using the Python unittest module and JSON test descriptions.
description-file = README.md
requires-python = >= 3.1
home-page = https://github.com/ianmackinnon/test_http
license = GPL-3
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python


[files]
packages =
    test_http

[entry_points]
